@@ -140,6 +140,9 @@
 			<tr class="yellowrow">
 
 				<th class="smaller">
+				</th>
+
+				<th class="smaller">
 					Last
 				</th>
 
@@ -173,6 +176,12 @@
 
 					<td>
 						<a id="<% $student->id %>"></a>
+						<a class="dkgreen smallish block" href="/user/student/index.mhtml?student_id=<% $student->id %>&from=<% $student->id %>">
+							Record
+						</a>
+					</td>
+
+					<td>
 						<a class="white block" href="student_edit.mhtml?student_id=<% $student->id %>&from=<% $student->id %>">
 							<% $student->last %>
 						</a>
@@ -196,7 +205,7 @@
 
 					<td class="centeralign smaller">
 						<a class="<% ($student->novice) ? "dkred" : "dkgreen" %> block" href="student_novice.mhtml?student_id=<% $student->id %><% scalar (@students) > 20 ? "&many=#".$student->id : "" %>">
-							<% ($student->novice) ? "YES" : "NO" %>
+							<% ($student->novice) ? "NOVICE" : "VARSITY" %>
 						</a>
 					</td>
 
