@@ -37,7 +37,7 @@
 					Entry Name
 				</td>
 
-				<td class="leftalign">
+				<td class="leftalign padmuchmore">
 %					if ($code_style eq "register" || $max > 2) { 
 						<input type="text" size="30" name="name" value="<% $entry->name %>" maxlength="30">
 %					} else { 
@@ -53,7 +53,7 @@
 					Entry Schemat Code
 				</td>
 
-				<td class="leftalign">
+				<td class="leftalign padmuchmore">
 %					if ($code_style eq "initials" || $code_style eq "register") { 
 						<input type="text" size="30" name="code" value="<% $entry->code %>" maxlength="12">
 %					} else { 
@@ -63,24 +63,29 @@
 
 			</tr>
 
-			<tr class="<% ($switch++ % 2) ? "oddrow" : "evenrow" %>">
+%			if ($event->setting("apda")) { 
 
-				<td>
-					<label for="seed">
-						Prelim Seeding
-					</label>
-				</td>
+				<tr class="<% ($switch++ % 2) ? "oddrow" : "evenrow" %>">
 
-				<td class="leftalign" style="padding-top: 9px; padding-bottom: 9px;">
-					<select name="seed" class="fixedsmall">
-						<option value="">None</option>
-						<option value="half" <% $entry->seed eq "half" ? "selected" : "" %>>Half</option>
-						<option value="full" <% $entry->seed eq "full" ? "selected" : "" %>>Full</option>
-						<option value="free" <% $entry->seed eq "free" ? "selected" : "" %>>Free</option>
-					</select>
-				</td>
+					<td>
+						<label for="seed">
+							Prelim Seeding
+						</label>
+					</td>
 
-			</tr>
+					<td class="leftalign" style="padding-top: 9px; padding-bottom: 9px;">
+						<select name="seed" class="fixedsmall">
+							<option value="">None</option>
+							<option value="half" <% $entry->seed eq "half" ? "selected" : "" %>>Half</option>
+							<option value="full" <% $entry->seed eq "full" ? "selected" : "" %>>Full</option>
+							<option value="free" <% $entry->seed eq "free" ? "selected" : "" %>>Free</option>
+						</select>
+					</td>
+
+				</tr>
+
+%			}
+
 
 			<tr class="<% ($switch++ % 2) ? "oddrow" : "evenrow" %>">
 
@@ -104,7 +109,7 @@
 						Piece title (or ISBN):
 					</td>
 
-					<td class="rightalign">
+					<td>
 						<input type="text" name="title" value="<% $entry->title %>" size="75">
 					</td>
 
@@ -112,12 +117,12 @@
 
 %			}
 
-%			foreach my $qual ($tourn->setting("ask_quals")) { 
+%			foreach my $qual (1 .. $tourn->setting("ask_quals")) { 
 
 				<tr class="<% ($switch++ % 2) ? "oddrow" : "evenrow" %>">
 
 					<td class="required">
-						Qualifier <% $qual %>
+						Qualifier <% $qual %> tournament:
 					</td>
 
 					<td>
@@ -128,11 +133,11 @@
 
 				<tr class="<% ($switch++ % 2) ? "oddrow" : "evenrow" %>">
 
-					<td>
+					<td class="required">
 						Qualifier <% $qual %> points/placement:
 					</td>
 
-					<td class="rightalign">
+					<td>
 						<input type="text" name="qualpts_<% $qual %>" value="<% $entry->title %>" size="25">
 					</td>
 
