@@ -25,9 +25,12 @@
     }   
 
     my %rating_by_judge = (); 
-    foreach my $rating ($m->comp("/funclib/group_ratings.mas", group => $group, type => "coach")) { 
-        $rating_by_judge{$rating->judge->id} = $rating_name{$rating->rating_tier->id} if $rating->judge->id && $rating->rating_tier->id;
-    }   
+
+	if ($group->setting("coach_ratings")) { 
+	    foreach my $rating ($m->comp("/funclib/group_ratings.mas", group => $group, type => "coach")) { 
+	        $rating_by_judge{$rating->judge->id} = $rating_name{$rating->rating_tier->id} if $rating->judge->id && $rating->rating_tier->id;
+	    }   
+	}   
 
 	my @judges = Tab::Judge->search( judge_group => $group->id, active => 1 );
 	@judges = sort {$a->last cmp $b->last} @judges;
